--- a/Pipfile
+++ b/Pipfile
@@ -8,11 +8,12 @@ django-debug-toolbar = "*"
 
 [packages]
 django = "==3.0.*"
-psycopg2 = "==2.8.*"
 django-bootstrap4 = "==1.1.1"
 django-fontawesome-5 = "==1.0.18"
 django-gravatar2 = "==1.4.3"
 django-mathfilters = "==1.0.0"
+psycopg2-binary = "*"
+gitpython = "==3.1.0"
 
 [requires]
 python_version = "3.8"
