--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ django-gravatar2 = "==1.4.3"
 django-mathfilters = "==1.0.0"
 psycopg2-binary = "*"
 gitpython = "==3.1.0"
+pygments = "*"
 
 [requires]
 python_version = "3.8"
