--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ django-mathfilters = "==1.0.0"
 psycopg2-binary = "*"
 gitpython = "==3.1.0"
 pygments = "*"
+pygount = "*"
+numpy = "*"
 
 [requires]
 python_version = "3.8"
