--- a/Pipfile
+++ b/Pipfile
@@ -7,17 +7,19 @@ verify_ssl = true
 django-debug-toolbar = "*"
 
 [packages]
-django = "==3.0.*"
+django = "==3.1.*"
 django-bootstrap4 = "==1.1.1"
 django-fontawesome-5 = "==1.0.18"
 django-gravatar2 = "==1.4.3"
 django-mathfilters = "==1.0.0"
 psycopg2-binary = "*"
-gitpython = "==3.1.0"
+gitpython = "==3.1.*"
 pygments = "*"
 pygount = "*"
 numpy = "*"
 pandas = "*"
+celery = "==4.4.7"
+chardet = "*"
 
 [requires]
 python_version = "3.8"
