--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ django-bootstrap4 = "==1.1.1"
 django-fontawesome-5 = "==1.0.18"
 django-gravatar2 = "==1.4.3"
 django-mathfilters = "==1.0.0"
-psycopg2-binary = "*"
+psycopg2-binary = "==2.9.3"
 gitpython = "==3.1.*"
 pygments = "*"
 pygount = "*"
