fix celery security alert

--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ pygments = "*"
 pygount = "*"
 numpy = "*"
 pandas = "*"
-celery = "==4.4.7"
+celery = ">=5.2.2"
 chardet = "*"
 whitenoise = "*"
 
