--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ django-debug-toolbar = "*"
 
 [packages]
 django = "==3.1.*"
-django-bootstrap4 = "==1.1.1"
+django-bootstrap4 = "==3.0.1"
 django-fontawesome-5 = "==1.0.18"
 django-gravatar2 = "==1.4.3"
 django-mathfilters = "==1.0.0"
@@ -18,9 +18,10 @@ pygments = "*"
 pygount = "*"
 numpy = "*"
 pandas = "*"
-celery = ">=5.2.2"
+celery = {extras = ["amqp", "redis"], version = "*"}
 chardet = "*"
 whitenoise = "*"
+sqlalchemy = "*"
 
 [requires]
 python_version = "3.8"
