--- a/requirements.txt
+++ b/requirements.txt
@@ -23,10 +23,13 @@ django-bootstrap4==3.0.1
 django-fontawesome-5==1.0.18
 django-gravatar2==1.4.3
 django-mathfilters==1.0.0
+django-nvd3==0.9.7
 django==3.1.14
 gitdb==4.0.9; python_version >= '3.6'
 gitpython==3.1.27
+jinja2==3.1.2; python_version >= '3.7'
 kombu==5.2.4; python_version >= '3.7'
+markupsafe==2.1.1; python_version >= '3.7'
 numpy==1.23.3
 packaging==21.3; python_version >= '3.6'
 pandas==1.5.0
@@ -36,6 +39,8 @@ pygments==2.13.0
 pygount==1.4.0
 pyparsing==3.0.9; python_full_version >= '3.6.8'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-nvd3==0.14.2
+python-slugify==1.1.4
 pytz==2022.2.1
 redis==4.3.4
 rich==12.5.1; python_full_version >= '3.6.3' and python_full_version < '4.0.0'
@@ -44,6 +49,7 @@ smmap==5.0.0; python_version >= '3.6'
 soupsieve==2.3.2.post1; python_version >= '3.6'
 sqlalchemy==1.4.41
 sqlparse==0.4.3; python_version >= '3.5'
+unidecode==1.3.4; python_version >= '3.5'
 vine==5.0.0; python_version >= '3.6'
 wcwidth==0.2.5
 whitenoise==6.2.0
